--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,16 +3,43 @@
         <head>
             <meta charset="utf-8">
             <title>OpenScape DLS - Simulator</title>
-            <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/bootstrap.min.css">
+            <link rel="stylesheet" href="css/style.css">
+
 
 
         </head>
         <body>
             <div class="container">
+                <div class="page-header">
+                    <h1 id="overview">OpenScape DLS Simulator</h1>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-2">
+                        <h5>Actual Arrival Rate:   <span class="rate">5.98</span> </h5>
+                        <div class="gauge" data-bind="dxCircularGauge: true" data-dx_circular_gauge=" gaugeRequestsNumberOptions"></div>
+                        <div class="text">View the actual number of requests per second sent that the simulator manages to send</div>
+
+                    </div>
+                    <div class="col-2 col-lg-2">
+                        <h5>Target Arrival Rate:  <span class="rate">6</span> </h5>
+                        <div class="gauge" data-bind="dxCircularGauge: true" data-dx_circular_gauge=" gaugeRequestsNumberOptions"></div>
+                        <div class="text">View the target request arrival rate as set in the simulation configuraiton at the start of the simulation</div>
+                    </div>
+                    <div class="col-2 col-lg-2">
+                        <h5>Actual Completion Rate:  <span class="rate">8</span></h5>
+                        <div class="gauge" data-bind="dxCircularGauge: true" data-dx_circular_gauge=" gaugeRequestsNumberOptions"></div>
+                        <div class="text">View the request completion rate acheived by DLS</div>
+
+
+
+                    </div>
+                </div>
+
+                <div id="progressBar" style="height: 100px; width: 100%; margin-bottom: 10px;"></div>
                 <p>
                     <button type="button" id="start" class="btn btn-success btn-large master">Start!</button>
-                    <button type="button" id="stop" class="btn btn-danger btn-large slave">Stop!</button>
+                    <button type="button" id="stop" class="btn btn-danger btn-large slave pull-right">Stop!</button>
                 </p>
 
             </div>
@@ -24,5 +51,6 @@
         <script src="js/knockout-2.3.0.js"></script>
         <script src="js/globalize.min.js"></script>
         <script src="js/dx.chartjs.js"></script>
+        <script src="js/app.js"></script>
         <script src="js/client.js"></script>
 </html>
