--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,30 +10,35 @@
             <div class="container">
                 <div class="page-header">
                     <h1 id="overview">OpenScape DLS Simulator</h1>
-                    <a href="#modal" id="conf" class="btn btn-info pull-right">Configuration</a>
+                    <a href="#myModal"data-toggle="modal"  id="conf" class="btn btn-info pull-right">Configuration</a>
                 </div>
                 <div class="row">
-                    <div class="col-4 col-lg-4">
+                    <div class="col-3 col-lg-3">
+                        <h4>Target Arrival Rate:  <span class="rate" data-bind="text: targetArrivalRate"></span> </h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3 col-lg-3">
                         <h5 class="center">Actual Arrival Rate:   <span class="rate" data-bind="text: actualArrivalRate"></span> </h5>
-                        <div class="gauge" data-bind="dxCircularGauge: { needles : actualArrivalRate}"></div>
+                        <div class="gauge" data-bind="dxCircularGauge: { needles : needleActual, markers: markerActual}"></div>
                         <div class="text">View the actual number of requests per second sent that the simulator manages to send</div>
 
                     </div>
-                    <div class="col-4 col-lg-4">
-                        <h5 class="center">Target Arrival Rate:  <span class="rate" data-bind="text: targetArrivalRate"></span> </h5>
-                        <div class="gauge" data-bind="dxCircularGauge: { title : targetArrivalRate}"></div>
-                        <div class="text">View the target request arrival rate as set in the simulation configuraiton at the start of the simulation</div>
-                    </div>
-                    <div class="col-4 col-lg-4">
+                    <div class="col-3 col-lg-3">
                         <h5 class="center">Actual Completion Rate:  <span class="rate" data-bind="text: actualFinishRate"></span></h5>
-                        <div class="gauge" data-bind="dxCircularGauge: { title : actualFinishRate}"></div>
+                        <div class="gauge" data-bind="dxCircularGauge: { needles : needleFinished, markers: markerFinished}"></div>
                         <div class="text">View the request completion rate acheived by DLS</div>
+                    </div>
+                    <div class="col-6 col-lg-6">
+                        <h5 class="center">Queue Size:  <span class="rate" data-bind="text: queue"></span></h5>
+                        <div id="queueChart" data-bind="dxChart: {dataSource: queueChartData}"></div>
+                        <div class="text">View the number of requests that have arrived in DLS but are not yet finished</div>
                     </div>
                 </div>
 
                 <div id="status">
                     <div id="progressBar" data-bind="attr: { style: barWidth }"></div>
-                    <div id="statusText">Status: <span class="simStatus" data-bind="text: progressDisplay"></span></div>
+                    <div id="statusText">Progress: <span class="simStatus" data-bind="text: progressDisplay"></span></div>
 
 
                 </div>
@@ -45,19 +50,94 @@
 
             </div>
 
-             <aside id="modal">
-                    <header>
-                          <h2>Configuraiton</h2>
-                    </header>
-                    <section>
-                        Form goes here
-                    </section>
-                    <footer>
-                        <a href="#" id="cancelBt" class="btn btn-default pull-right">Cancel</a>
-                        <a href="#" id="saveBt" class="btn btn-success pull-left">Save</a>
-                    </footer>
 
-             </aside>
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal">
+                <div class="modal-dialog myModal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Simulation Configuration</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form class="form-horizontal">
+                                <!--  DLS Address -->
+                                <div class="form-group">
+                                    <label for="dlsAddress" class="col-lg-4 control-label">DLS Address</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="dlsAddress" placeholder="Example: 10.11.1.152" data-bind="value: config().serverAddress">
+                                        <span class="help-block">The IP address (or hostname) of the DLS server. This must not include port number or protocol (e.g. http/https)</span>
+                                    </div>
+                                </div>
+
+                                <!--  Mobile User Numner -->
+                                <div class="form-group">
+                                    <label for="mac" class="col-lg-4 control-label">MAC Address</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="mac" placeholder="Example: 302108189656" data-bind="value: config().mac">
+                                        <span class="help-block">The MAC address of the first mobility enabled device</span>
+                                    </div>
+                                </div>
+
+
+                                <!--  Mobile User Numner -->
+                                <div class="form-group">
+                                    <label for="e164" class="col-lg-4 control-label">User E164</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="e164" placeholder="Example: 302108189656" data-bind="value: config().e164">
+                                        <span class="help-block">The E164 number of the first mobile user</span>
+                                    </div>
+                                </div>
+
+                                <!--  Basic Device Number -->
+                                <div class="form-group">
+                                    <label for="be164" class="col-lg-4 control-label">Basic E164</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="be164" placeholder="Example: 302108189656" data-bind="value: config().be164">
+                                        <span class="help-block">The Basic E164 number of the first mobility enabled device</span>
+                                    </div>
+                                </div>
+
+                                <!--  Scenario -->
+                                <div class="form-group">
+                                    <label for="scenario" class="col-lg-4 control-label">Simulation Scenario</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="scenario" placeholder="Example: logon" data-bind="value: config().action">
+                                    </div>
+                                </div>
+
+                                <!--  Users -->
+                                <div class="form-group">
+                                    <label for="users" class="col-lg-4 control-label">Number of Users</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="users" placeholder="Example: 10000" data-bind="value: config().users">
+                                        <span class="help-block">The total number of request that the simulator will send to DLS</span>
+                                    </div>
+                                </div>
+
+                                <!--  Rate -->
+                                <div class="form-group">
+                                    <label for="rate" class="col-lg-4 control-label">Request Rate (per second)</label>
+                                    <div class="col-lg-8">
+                                        <input type="text" class="form-control input-small" id="rate" placeholder="Example: 10000" data-bind="value: config().targetRate">
+                                        <span class="help-block">The number of requests pre second that the simulator will send to DLS</span>
+                                    </div>
+                                </div>
+
+
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#" data-dismiss="modal" id="#cancelBt" class="btn btn-default pull-left">Cancel</a>
+                            <a href="#" data-dismiss="modal" id="#saveBt" class="btn btn-primary">Save changes</a>
+                        </div>
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+
+
+
         </body>
         <script src="js/jquery-2.0.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
